# VenomModules

./: .gitignore  CMakeLists.txt  README.md  changelog.md  plugin-mm.json  plugin.json
.github/workflows/: build-plugin.yml
presets/BenjolinGatesExpander/: ALL Bits.vcvm  AND Gates.vcvm  OR Gates.vcvm  XOR Gates.vcvm
presets/BenjolinVoltsExpander/: 16 Values A.vcvm  16 Values B.vcvm  16 Values C.vcvm  16 Values D.vcvm  256 Values.vcvm
presets/BernoulliSwitch/: Bernoulli Gate.vcvm  Latched Bernoulli Gate.vcvm  Latched Toggled Bernoulli Gate.vcvm  Toggled Bernoulli Gate.vcvm
presets/NORS_IQ/: NORSIQ Chord to Scale configuration.vcvm
presets/NORS_IQ/Cent Equal Temperament/: 88 CET (Gary Morrison).vcvm  Wendy Carlos Alpha (~78.0 CET).vcvm  Wendy Carlos Gamma (~35.1 CET).vcvm
presets/NORS_IQ/IsoHarmonic Chords and Derivatives/: Harmonics 1-67 step 6 norm to octave.vcvm  Harmonics 10-15.vcvm  Harmonics 8-12.vcvm  OctaveRepeatingSuperPalindrome 12o11 - 9o8 - 12o11.vcvm  SuperPalindrome 15o14 - 11o10 - 15o14.vcvm  SuperPalindrome 15o14 - 11o10.11o10 - 15o14.vcvm  SuperPalindrome 9o8 - 12o11 - 9o8.vcvm  SuperPalindrome 9o8 - 12o11.12o11 - 9o8.vcvm
presets/NORS_IQ/Just Intonation/: Bohlen-Pierce just Dur II.vcvm
presets/NORS_IQ/NonOctave Equal Divisions/: 25ed5o1 2 2 2 2 2 2 2 2 2 2 2 2 1.vcvm  25ed5o1 2 2 2 2 2 2 3.vcvm  25ed5o1 4 4 4 3.vcvm  4ed3o2 (Georgian tuning).vcvm  5ed3o2.vcvm  6ed3o2.vcvm  7ed3o2.vcvm  8ed3o2.vcvm  9ed3o2.vcvm  Bohlen-Pierce Dur II.vcvm  Bohlen-Pierce Lamda.vcvm  Bohlen-Pierce chromatic (13ed3o1).vcvm  Meantone-ish MOS of 49ed3o1 (5 5 8 5 5 8 5 8).vcvm
presets/NORS_IQ/NonOctave Repeating Just Intonation/: Bohlen-Pierce just Lamda.vcvm  Bohlen-Pierce just chromatic.vcvm  Gravetone.vcvm
presets/NORS_IQ/Octave Repeating 12ET Examples/: Chromatic.vcvm  Harmonic Minor.vcvm  Major (Ionian).vcvm  Major Pentatonic.vcvm  Minor Pentatonic.vcvm  Natural Minor (Aeolian).vcvm
presets/RhythmExplorer/: Vermona randomRHYTHM.vcvm
res/: colors.txt
src/: AD_ASR.cpp  AuxClone.cpp  BayInput.cpp  BayModule.hpp  BayNorm.cpp  BayOutput.cpp  BenjolinGatesExpander.cpp  BenjolinModule.hpp  BenjolinOsc.cpp  BenjolinVoltsExpander.cpp  BernoulliSwitch.cpp  BernoulliSwitchExpander.cpp  BernoulliSwitchExpander.hpp  Blocker.cpp  Bypass.cpp  CVMIX.cpp  CloneMerge.cpp  CloneModule.hpp  Compare2.cpp  CrossFade3D.cpp  Filter.hpp  HQ.cpp  HQ.data  Knob5.cpp  LinearBeats.cpp  LinearBeatsExpander.cpp  LinearBeatsExpander.hpp  LinearMute.cpp  LinearMute.hpp  Logic.cpp  Merge4x2.cpp  MergeSplit.cpp  Mix4.cpp  Mix4Stereo.cpp  MixFade.cpp  MixFade2.cpp  MixModule.hpp  MixMute.cpp  MixOffset.cpp  MixPan.cpp  (+63 more)
src/dsp/: math.hpp
